--- a/stile.css
+++ b/stile.css
@@ -192,6 +192,7 @@ body {
 
 .project__img {
     width: 100%;
+    border-radius: 10px;
 }
 
 .project__img1-text {    
@@ -659,7 +660,7 @@ body {
         margin-top: 16px;
     }
     .project__item-margin {
-        margin-right: 0px;
+        margin: 0 0 16px;        
     }
     .project__img2-text {           
         font-size: 16px;
